--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
             "tailwindcss": "^3.3.3",
             "vue": "^3.3.4",
             "vue-router": "^4.2.5"
+      },
+      "dependencies": {
+            "@pinia/nuxt": "^0.5.1"
       }
 }
