--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
             "vue-router": "^4.2.5"
       },
       "dependencies": {
-            "@pinia/nuxt": "^0.5.1"
+            "@pinia/nuxt": "^0.5.1",
+            "pinia": "^2.1.7"
       }
 }
